<resources>
    <string name="app_name">neoris-test</string>
    <string name="financial_summary_str">Financial Summary</string>
    <string name="balance_str">Balance</string>
    <string name="empty_amount_str">$0.00</string>
    <string name="incomes_str">Incomes</string>
    <string name="expenses_str">Expenses</string>
    <string name="transactions_str">Transactions</string>
    <string name="error_loading_str">Error loading transaction list</string>
</resources>